# SK-C

./: CMakeLists.txt  Commons.cpp  Commons.h  README.md  compile.sh  connectionFunctions.h  connectionHandler.cpp  cpp.gitignore  main  main.cpp  messageTools.cpp  serverStatements.h  stringCommons.cpp  stringCommons.h  tcp_server_template.cpp
compiled/: serwerRun.exec
src/: CMakeLists.txt  Commons.cpp  Commons.h  cmake_install.cmake  connectionFunctions.cpp  connectionFunctions.h  connectionHandler.cpp  connectionHandler.h  main.cpp  messageTools.h
